--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -6,6 +6,7 @@
     <label>name:
       <input [(ngModel)]="hero.name" placeholder="name" />
     </label>
+    <button (click)="save()">save</button>
   </div>
   <button (click)="goBack()">go back</button>
 </div>
